# pixels-reader-cxx

./: .gitignore  CMakeLists.txt  main  pixels.properties  readme.md
experiments/: pixels-experiment.md
pixels-common/: CMakeLists.txt
pixels-common/include/physical/: BufferPool.h  MergedRequest.h  PhysicalReader.h  PhysicalReaderUtil.h  Request.h  RequestBatch.h  Scheduler.h  SchedulerFactory.h  Storage.h  StorageFactory.h
pixels-common/include/physical/io/: PhysicalLocalReader.h
pixels-common/include/physical/natives/: ByteBuffer.h  DirectIoLib.h  DirectRandomAccessFile.h  DirectUringRandomAccessFile.h  PixelsRandomAccessFile.h
pixels-common/include/physical/scheduler/: NoopScheduler.h  SortMergeScheduler.h
pixels-common/include/physical/storage/: LocalFS.h
pixels-common/include/profiler/: CountProfiler.h  TimeProfiler.h
pixels-common/include/utils/: ConfigFactory.h  Profiler.h  TimeProfiler.h
pixels-common/lib/: BufferPool.cpp  MergedRequest.cpp  Profiler.cpp  StorageFactory.cpp  TimeProfiler.cpp
pixels-common/lib/physical/: Request.cpp  RequestBatch.cpp  SchedulerFactory.cpp  Storage.cpp
pixels-common/lib/physical/io/: PhysicalLocalReader.cpp
pixels-common/lib/physical/natives/: ByteBuffer.cpp  DirectIoLib.cpp  DirectRandomAccessFile.cpp  DirectUringRandomAccessFile.cpp  PixelsRandomAccessFile.cpp
pixels-common/lib/physical/scheduler/: NoopScheduler.cpp  SortMergeScheduler.cpp
pixels-common/lib/physical/storage/: LocalFS.cpp
pixels-common/lib/profiler/: CountProfiler.cpp  TimeProfiler.cpp
pixels-common/lib/utils/: ConfigFactory.cpp
pixels-core/: CMakeLists.txt
pixels-core/include/: PixelsFooterCache.h  PixelsReader.h  PixelsReaderBuilder.h  PixelsReaderImpl.h  TypeDescription.h
pixels-core/include/encoding/: Decoder.h  RunLenIntDecoder.h
pixels-core/include/reader/: CharColumnReader.h  ColumnReader.h  ColumnReaderBuilder.h  DateColumnReader.h  DecimalColumnReader.h  IntegerColumnReader.h  PixelsRecordReader.h  PixelsRecordReaderImpl.h  StringColumnReader.h  VarcharColumnReader.h
pixels-core/include/utils/: EncodingUtils.h
pixels-core/include/vector/: BinaryColumnVector.h  ByteColumnVector.h  ColumnVector.h  DateColumnVector.h  DecimalColumnVector.h  LongColumnVector.h  VectorizedRowBatch.h
pixels-core/lib/: PixelsFooterCache.cpp  PixelsReaderBuilder.cpp  PixelsReaderImpl.cpp  TypeDescription.cpp
pixels-core/lib/encoding/: RunLenIntDecoder.cpp
pixels-core/lib/reader/: CharColumnReader.cpp  ColumnReader.cpp  ColumnReaderBuilder.cpp  DateColumnReader.cpp  DecimalColumnReader.cpp  IntegerColumnReader.cpp  PixelsReaderOption.cpp  PixelsRecordReaderImpl.cpp  StringColumnReader.cpp  VarcharColumnReader.cpp
pixels-core/lib/utils/: EncodingUtils.cpp
pixels-core/lib/vector/: BinaryColumnVector.cpp  ByteColumnVector.cpp  ColumnVector.cpp  DateColumnVector.cpp  DecimalColumnVector.cpp  LongColumnVector.cpp  VectorizedRowBatch.cpp
tests/: CMakeLists.txt  performance_test.cpp  unit_tests.cpp
tests/data/: nation_0_01.pxl  nation_0_1.pxl  region_0_1.pxl  supplier_0_1.pxl
tests/data/nation/: tpch_1.pxl
tests/data/nation_multiple/: readme.md
tests/data/nation_multiple/v-0-order/: nation_a.pxl  nation_b.pxl  nation_c.pxl
tests/data/region/: tpch_1.pxl
tests/physical/: dev.cpp
